<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/native_ad0"
        android:layout_centerInParent="true"
        android:layout_gravity="top"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/relbtn"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/title"
                style="@style/common_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/terms_of_use_cap"
                android:textAppearance="@style/TextAppearance.MyApp.Headline5"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/common_text_style2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:text="@string/android_apps_is_warning_you_about_the_app_that_gives_you_many_services_and_important_information_for_safer_and_efficient_use"
                        android:textAppearance="@style/TextAppearance.MyApp.Body2"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="5dp"
                            android:src="@drawable/policy1" />

                        <TextView
                            style="@style/common_text_style2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/by_pressing_the_accept_button_i_declare_i_have_read_and_accepted_the_following_condition_of_use"
                            android:textAppearance="@style/TextAppearance.MyApp.Body2"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="5dp"
                            android:src="@drawable/policy_2" />

                        <TextView
                            style="@style/common_text_style2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/if_we_find_the_app_is_being_used_outside_its_terms_of_use_we_may_restrict_access_to_it"
                            android:textAppearance="@style/TextAppearance.MyApp.Body2"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="5dp"
                            android:src="@drawable/policy3" />

                        <TextView
                            style="@style/common_text_style2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/any_type_of_modification_to_the_app_or_its_components_is_not_allowed"
                            android:textAppearance="@style/TextAppearance.MyApp.Body2"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="5dp"
                            android:src="@drawable/policy4" />

                        <TextView
                            style="@style/common_text_style2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/privacy_policy_may_be_updated_from_time_to_time_for_any_reason_we_will_notify_you_of_any_changes_to_our_privacy_policy_by_posting_the_new_privacy_policy_here"
                            android:textAppearance="@style/TextAppearance.MyApp.Body2"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:padding="5dp"
                            android:src="@drawable/policy5" />

                        <TextView
                            style="@style/common_text_style2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/we_do_not_share_any_kind_of_your_personal_data_with_third_parties"
                            android:textAppearance="@style/TextAppearance.MyApp.Body2"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:padding="4dp"
                        android:text="@string/you_can_find_out_more_information_by_clicking_on_the_following_link"
                        android:textAppearance="@style/TextAppearance.MyApp.Body2"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/privacyPolicyTV"
                        style="@style/common_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="@string/privacy_policy_tv"
                        android:textColor="@color/app_color"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/termsConditionsTV"
                        style="@style/common_text_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:padding="6dp"
                        android:text="@string/terms_conditions"
                        android:textColor="@color/app_color"
                        android:textStyle="bold" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/relbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvText"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/next_button"
                android:backgroundTint="@color/color_common_btn"
                android:gravity="center"
                android:text="@string/i_agree"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/native_ad0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:cardBackgroundColor="@color/start_click_color"
        app:contentPadding="4dp">

        <include
            android:id="@+id/ad_include_layout"
            layout="@layout/rab_card_tiny" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>
